--- a/app/src/main/res/drawable/rounded_corner_1.xml
+++ b/app/src/main/res/drawable/rounded_corner_1.xml
@@ -3,7 +3,7 @@
 
         <stroke
             android:width="1dp"
-            android:color="#78909C"/>
-        <solid android:color="#78909C"/>
+            android:color="#607D8B"/>
+        <solid android:color="#607D8B"/>
         <corners android:radius="1dp"/>
     </shape>
