--- a/app/src/main/res/layout/simple_list_child_1.xml
+++ b/app/src/main/res/layout/simple_list_child_1.xml
@@ -6,8 +6,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#212121"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:paddingLeft="20dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
         android:id="@+id/subName"
         android:textSize="20sp"/>
 
