--- a/app/src/main/res/layout/tab_local.xml
+++ b/app/src/main/res/layout/tab_local.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,4 +8,19 @@
         android:layout_height="match_parent"
         android:id="@+id/categoryHolder"/>
 
-</LinearLayout>
+
+    <com.melnykov.fab.FloatingActionButton
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        fab:fab_colorNormal="#00BFA5"
+        fab:fab_colorPressed="@color/ColorPrimaryDark"
+        android:src="@drawable/ic_add_white_24dp"
+        />
+
+</RelativeLayout>
