--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,4 +3,6 @@
     <color name="ColorPrimary">#009688</color>
     <color name="ColorPrimaryDark">#00796B</color>
     <color name="tabScrollColor">#1DE9B6</color>
+
+    <color name="cancel">#E57373</color>
 </resources>
